--- a/sysutils/rox/Makefile
+++ b/sysutils/rox/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.37 2006/04/17 13:46:48 wiz Exp $
+# $NetBSD: Makefile,v 1.38 2006/09/16 12:20:40 jmmv Exp $
 #
 
 DISTNAME=	rox-2.4.1
@@ -59,9 +59,14 @@ do-install:
 	${INSTALL_DATA} ${WRKSRC:Q}/rox.xml ${PREFIX:Q}/share/mime/packages
 	${INSTALL_SCRIPT} ${WRKDIR:Q}/rox ${PREFIX:Q}/bin
 
+BUILDLINK_DEPMETHOD.libXt?=	build
+
 .include "../../databases/shared-mime-info/buildlink3.mk"
 .include "../../devel/pango/buildlink3.mk"
 .include "../../sysutils/gnome-vfs2/buildlink3.mk"
 .include "../../textproc/libxml2/buildlink3.mk"
 .include "../../x11/gtk2/buildlink3.mk"
+.include "../../x11/libSM/buildlink3.mk"
+.include "../../x11/libX11/buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
