--- a/print/evince/Makefile
+++ b/print/evince/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.26 2006/10/12 14:16:22 drochner Exp $
+# $NetBSD: Makefile,v 1.27 2006/12/06 14:48:35 wiz Exp $
 #
 
 .include "../../print/evince/Makefile.common"
@@ -33,10 +33,13 @@ GCONF2_SCHEMAS+=	evince-thumbnailer-djvu.schemas
 PLIST_SUBST+=		DJVU="@comment "
 .endif
 
+BUILDLINK_DEPMETHOD.libXt?=	build
+
 .include "../../devel/GConf2/schemas.mk"
 .include "../../graphics/hicolor-icon-theme/buildlink3.mk"
 .include "../../security/gnome-keyring/buildlink3.mk"
 .include "../../sysutils/dbus/buildlink3.mk"
 .include "../../sysutils/dbus-glib/buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
 
 .include "../../mk/bsd.pkg.mk"
