--- a/devel/ncurses/Makefile.common
+++ b/devel/ncurses/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.2 2006/11/05 17:49:34 joerg Exp $
+# $NetBSD: Makefile.common,v 1.3 2007/01/08 11:01:05 adam Exp $
 
 DISTNAME=	ncurses-${NC_VERS}
 NC_VERS=	5.6
@@ -28,6 +28,7 @@ CONFIGURE_ARGS+=	--with-manpage-format=normal
 CONFIGURE_ARGS+=	--with-manpage-tbl
 CONFIGURE_ARGS+=	--with-default-terminfo-dir=${PREFIX}/${TERMINFODIR}
 CONFIGURE_ARGS+=	--with-terminfo-dirs=${PREFIX}/${TERMINFODIR}
+MAKE_JOBS_SAFE=		no
 
 .include "../../mk/bsd.prefs.mk"
 
