--- a/sysutils/xps/Makefile
+++ b/sysutils/xps/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.33 2006/03/04 21:30:44 jlam Exp $
+# $NetBSD: Makefile,v 1.34 2006/06/21 20:41:27 joerg Exp $
 
 DISTNAME=	xps-4.2
 PKGREVISION=	2
@@ -11,6 +11,7 @@ COMMENT=	Displays the Unix process list as a hierarchical tree
 
 USE_TOOLS+=		gmake perl
 GNU_CONFIGURE=		yes
+CONFIGURE_ARGS+=	x_applibdir=${PREFIX}/lib/X11/app-defaults
 
 post-extract:
 	${LN} -s FreeBSD ${WRKSRC}/src/DragonFly
