--- a/www/py-webpy/Makefile
+++ b/www/py-webpy/Makefile
@@ -1,8 +1,9 @@
-# $NetBSD: Makefile,v 1.6 2006/10/04 22:04:10 wiz Exp $
+# $NetBSD: Makefile,v 1.1 2007/01/02 14:07:45 darcy Exp $
 #
 
 DISTNAME=		web.py-0.2
 PKGNAME=		${PYPKGPREFIX}-${DISTNAME}
+PKGREVISION=		1
 CATEGORIES=		www python
 MASTER_SITES=		http://webpy.org/
 
@@ -10,7 +11,7 @@ MAINTAINER=		darcy@NetBSD.org
 HOMEPAGE=		http://webpy.org/
 COMMENT=		Simple, public domain web publishing system
 
-PYTHON_VERSIONS_ACCEPTED=	24 23 22
+PYTHON_VERSIONS_ACCEPTED=	24
 
 WRKSRC=			${WRKDIR}/${DISTNAME}
 #PY_PATCHPLIST=		yes
