--- a/audio/xmms-blursk/Makefile
+++ b/audio/xmms-blursk/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.15 2006/02/05 23:08:17 joerg Exp $
+# $NetBSD: Makefile,v 1.16 2006/03/04 21:28:59 jlam Exp $
 
 DISTNAME=	Blursk-1.3
 PKGNAME=	xmms-blursk-1.3
@@ -21,4 +21,7 @@ post-install:
 
 .include "../../audio/xmms/buildlink3.mk"
 .include "../../x11/gtk/buildlink3.mk"
+.include "../../x11/libXext/buildlink3.mk"
+.include "../../x11/libXv/buildlink3.mk"
+.include "../../x11/xextproto/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
