--- a/x11/xworld/Makefile
+++ b/x11/xworld/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.15 2006/04/22 09:22:18 rillig Exp $
+# $NetBSD: Makefile,v 1.16 2006/07/21 17:31:44 minskim Exp $
 #
 
 DISTNAME=		xworld-2.0
@@ -30,5 +30,5 @@ SUBST_STAGE.install=	post-patch
 SUBST_FILES.install=	Makefile.in
 SUBST_SED.install=	-e 's,-g bin -o bin,-g ${BINGRP} -o ${BINOWN},g'
 
-.include "../../mk/x11.buildlink3.mk"
+.include "../../x11/libX11/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
