--- a/x11/xwrits/Makefile
+++ b/x11/xwrits/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.17 2006/02/05 23:11:50 joerg Exp $
+# $NetBSD: Makefile,v 1.18 2006/08/07 23:48:15 wiz Exp $
 
 DISTNAME=	xwrits-2.24
 CATEGORIES=	x11
@@ -10,5 +10,5 @@ COMMENT=	Wrist break reminder for prevention of repetitive stress injuries
 
 GNU_CONFIGURE=	YES
 
-.include "../../mk/x11.buildlink3.mk"
+.include "../../x11/libX11/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
