--- a/x11/9term/Makefile
+++ b/x11/9term/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.19 2006/02/05 23:11:30 joerg Exp $
+# $NetBSD: Makefile,v 1.20 2006/03/04 21:31:06 jlam Exp $
 
 DISTNAME=		9term.1.6.3
 PKGNAME=		9term-1.6.3
@@ -20,5 +20,5 @@ MANCOMPRESSED=		yes
 MAKE_ENV+=		SAM_DIR=${BUILDLINK_PREFIX.sam}
 
 .include "../../editors/sam/buildlink3.mk"
-.include "../../mk/x11.buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
