--- a/x11/xvidcap/Makefile.common
+++ b/x11/xvidcap/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.4 2006/05/17 01:53:18 reed Exp $
+# $NetBSD: Makefile.common,v 1.5 2006/05/17 05:06:28 reed Exp $
 #
 
 DISTNAME=		xvidcap-1.1.3
@@ -18,5 +18,6 @@ CONFIGURE_ARGS+=	--without-forced-embedded-ffmpeg
 .include "../../graphics/jpeg/buildlink3.mk"
 .include "../../graphics/png/buildlink3.mk"
 .include "../../multimedia/ffmpeg/buildlink3.mk"
+.include "../../x11/libXmu/buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
 .include "../../mk/pthread.buildlink3.mk"
-.include "../../mk/x11.buildlink3.mk"
