--- a/x11/xtermset/Makefile
+++ b/x11/xtermset/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.15 2006/03/04 21:31:14 jlam Exp $
+# $NetBSD: Makefile,v 1.16 2006/10/04 22:06:57 wiz Exp $
 #
 
 DISTNAME=	xtermset-0.5.2
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	x11
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=clts/}
 
@@ -10,10 +10,7 @@ MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	# none
 COMMENT=	Change things like foreground color, size etc. on an xterm
 
-#USE_X11BASE=	YES
 GNU_CONFIGURE=	yes
-
-.include "../../mk/x11.buildlink3.mk"
 
 xpost-install:
 	${INSTALL_DATA_DIR} ${PREFIX}/share/doc/xtermset
