--- a/devel/libwnck/Makefile
+++ b/devel/libwnck/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.45 2006/10/17 16:49:19 drochner Exp $
+# $NetBSD: Makefile,v 1.46 2006/11/27 21:07:23 drochner Exp $
 #
 
 DISTNAME=	libwnck-2.16.2
@@ -19,9 +19,14 @@ PKGCONFIG_OVERRIDE=	libwnck-1.0.pc.in
 
 BUILDLINK_API_DEPENDS.gtk2+=	gtk2+>=2.6.0
 
+BUILDLINK_DEPMETHOD.libXt?=	build
+
 .include "../../devel/gettext-lib/buildlink3.mk"
 .include "../../devel/glib2/buildlink3.mk"
 .include "../../devel/pango/buildlink3.mk"
 .include "../../x11/startup-notification/buildlink3.mk"
 .include "../../x11/gtk2/buildlink3.mk"
+.include "../../x11/libSM/buildlink3.mk"
+.include "../../x11/libX11/buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
