--- a/x11/wxGTK-contrib/Makefile
+++ b/x11/wxGTK-contrib/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.8 2006/04/17 13:46:00 wiz Exp $
+# $NetBSD: Makefile,v 1.9 2007/01/02 11:00:25 joerg Exp $
 #
 
 .include "../../x11/wxGTK/Makefile.common"
@@ -12,5 +12,8 @@ USE_TOOLS+=		gmake
 
 BUILD_DIRS=		contrib/src
 
+BUILDLINK_DEPMETHOD.libXt?=	build
+
 .include "../../x11/wxGTK/buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
