--- a/audio/liba52/Makefile
+++ b/audio/liba52/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.16 2006/03/04 21:28:56 jlam Exp $
+# $NetBSD: Makefile,v 1.17 2006/06/13 17:52:29 drochner Exp $
 #
 
 DISTNAME=	a52dec-0.7.4
@@ -17,5 +17,10 @@ USE_LIBTOOL=		yes
 CONFIGURE_ARGS+=	--disable-oss
 CONFIGURE_ARGS+=	--disable-mlib
 CONFIGURE_ARGS+=	--enable-shared
+
+# does not work until libdjbfft is shared
+#CONFIGURE_ARGS+=	--enable-djbfft
+#CONFIGURE_ENV+=	LIBA52_CFLAGS=-I${LOCALBASE}/include/djbfft
+#.include "../../math/djbfft/buildlink3.mk"
 
 .include "../../mk/bsd.pkg.mk"
