--- a/geography/postgresql81-postgis/Makefile
+++ b/geography/postgresql81-postgis/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.6 2006/12/09 17:07:39 gdt Exp $
+# $NetBSD: Makefile,v 1.7 2007/01/07 09:13:55 rillig Exp $
 
 DISTNAME=		postgis-${VERSION}
-VERSION=		1.2.0
+VERSION=		1.2.1
 PKGNAME=		postgresql81-postgis-${VERSION}
 MASTER_SITES=	  	http://postgis.refractions.net/download/
 CATEGORIES=		databases geography
