--- a/lang/sun-jdk15/Makefile
+++ b/lang/sun-jdk15/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.21 2006/10/16 07:51:06 salo Exp $
+# $NetBSD: Makefile,v 1.22 2006/10/23 19:38:15 tv Exp $
 
-DISTNAME=	jdk-1_5_0_09-linux-i586
-PKGNAME=	sun-jdk15-5.0.9
-PKGREVISION=	1
+DISTNAME=	jdk-1_5_0_10-linux-i586
+PKGNAME=	sun-jdk15-5.0.10
 MASTER_SITES=	# empty
 
 SHORT_NAME=	JDK
