--- a/games/stratagus/Makefile
+++ b/games/stratagus/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.14 2006/09/19 19:40:23 joerg Exp $
+# $NetBSD: Makefile,v 1.15 2007/01/07 12:25:54 wiz Exp $
 #
 
 DISTNAME=		stratagus-2.1-src
@@ -15,7 +15,7 @@ WRKSRC=			${WRKDIR}/stratagus-040702
 USE_TOOLS+=		gmake
 USE_PKGLOCALEDIR=	yes
 GNU_CONFIGURE=		yes
-MAKE_ENV+=		X11_LDFLAGS=${X11_LDFLAGS:Q}
+MAKE_ENV+=		X11_LDFLAGS=${X11_LDFLAGS:M*:Q}
 
 CONFIGURE_ARGS+=	--with-flac --with-mad
 
