--- a/multimedia/mpeg4ip/Makefile
+++ b/multimedia/mpeg4ip/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.10 2006/10/03 12:55:32 tron Exp $
+# $NetBSD: Makefile,v 1.11 2007/01/05 19:35:46 rillig Exp $
 
 DISTNAME=		mpeg4ip-1.5
 PKGREVISION=		3
@@ -27,5 +27,4 @@ PLIST_SUBST+=	MPEG4IPSDL=
 .endif
 
 .include "../../devel/SDL/buildlink3.mk"
-.include "../../mk/x11.buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
