--- a/graphics/kphotoalbum/Makefile
+++ b/graphics/kphotoalbum/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1 2006/04/28 16:17:18 drochner Exp $
+# $NetBSD: Makefile,v 1.2 2006/05/25 11:34:45 markd Exp $
 #
 
 DISTNAME=		kphotoalbum-2.2
@@ -16,7 +16,12 @@ USE_LANGUAGES=		c c++
 GNU_CONFIGURE=		yes
 USE_TOOLS+=		msgfmt
 
+BUILDLINK_DEPMETHOD.libXt?=	build
+
 .include "../../meta-pkgs/kde3/kde3.mk"
-.include "../../x11/kdelibs3/buildlink3.mk"
 .include "../../graphics/libkipi/buildlink3.mk"
+.include "../../x11/kdelibs3/buildlink3.mk"
+.include "../../x11/libSM/buildlink3.mk"
+.include "../../x11/libX11/buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
