--- a/x11/gnome-desktop/Makefile
+++ b/x11/gnome-desktop/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.62 2006/10/22 21:56:20 wiz Exp $
+# $NetBSD: Makefile,v 1.63 2006/11/28 22:19:29 drochner Exp $
 #
 
 DISTNAME=		gnome-desktop-2.16.2
@@ -34,6 +34,7 @@ post-install:
 .include "../../textproc/gnome-doc-utils/buildlink3.mk"
 .include "../../textproc/scrollkeeper/omf.mk"
 .include "../../x11/gtk2/buildlink3.mk"
+.include "../../x11/libSM/buildlink3.mk"
 .include "../../x11/startup-notification/buildlink3.mk"
 
 .include "../../mk/bsd.pkg.mk"
