--- a/audio/libsamplerate/Makefile
+++ b/audio/libsamplerate/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.13 2006/04/06 06:21:35 reed Exp $
+# $NetBSD: Makefile,v 1.14 2007/01/07 12:25:51 wiz Exp $
 #
 
 DISTNAME=	libsamplerate-0.1.2
-PKGREVISION=	3
+PKGREVISION=	4
 CATEGORIES=	audio
 MASTER_SITES=	http://www.mega-nerd.com/SRC/
 
@@ -12,6 +12,7 @@ COMMENT=	Sample rate converter library
 
 GNU_CONFIGURE=	YES
 USE_LIBTOOL=	YES
+USE_TOOLS+=	pkg-config
 PKGCONFIG_OVERRIDE+= ${WRKSRC}/samplerate.pc.in
 
 TEST_TARGET=	check
