--- a/emulators/tme/Makefile
+++ b/emulators/tme/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.11 2006/10/21 21:53:04 ben Exp $
+# $NetBSD: Makefile,v 1.12 2006/11/12 00:04:57 rillig Exp $
 #
 
 DISTNAME=		tme-0.4
@@ -20,6 +20,11 @@ USE_TOOLS+=		gmake perl:run
 
 CONFIGURE_ARGS+=	--disable-debug
 
+BUILDLINK_DEPMETHOD.libXt?=	build
+
 .include "../../devel/libltdl/buildlink3.mk"
 .include "../../x11/gtk/buildlink3.mk"
+.include "../../x11/libSM/buildlink3.mk"
+.include "../../x11/libX11/buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
