--- a/sysutils/krusader/Makefile
+++ b/sysutils/krusader/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.12 2006/07/07 15:49:34 jlam Exp $
+# $NetBSD: Makefile,v 1.13 2006/08/30 00:07:00 markd Exp $
 #
 
 DISTNAME=	krusader-1.70.1
@@ -16,7 +16,12 @@ GNU_CONFIGURE=	YES
 
 SHLIBTOOL_OVERRIDE=	# empty
 
+BUILDLINK_DEPMETHOD.libXt?=	build
+
 .include "../../meta-pkgs/kde3/kde3.mk"
 .include "../../x11/kdelibs3/buildlink3.mk"
 .include "../../x11/kdebase3/buildlink3.mk"
+.include "../../x11/libSM/buildlink3.mk"
+.include "../../x11/libX11/buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
