--- a/x11/qt2-libs/Makefile
+++ b/x11/qt2-libs/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.31 2006/04/17 13:45:57 wiz Exp $
+# $NetBSD: Makefile,v 1.32 2006/12/15 20:33:04 joerg Exp $
 
 PKGNAME=	qt2-libs-${QTVERSION}
 PKGREVISION=	9
@@ -28,6 +28,10 @@ do-install:
 .include "../../graphics/jpeg/buildlink3.mk"
 .include "../../graphics/mng/buildlink3.mk"
 .include "../../graphics/png/buildlink3.mk"
+.include "../../x11/libSM/buildlink3.mk"
+.include "../../x11/libXext/buildlink3.mk"
 .include "../../x11/libXft/buildlink3.mk"
+.include "../../x11/libXmu/buildlink3.mk"
+.include "../../x11/xextproto/buildlink3.mk"
 
 .include "../../mk/bsd.pkg.mk"
