--- a/x11/labltk/Makefile
+++ b/x11/labltk/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2006/02/05 23:11:39 joerg Exp $
+# $NetBSD: Makefile,v 1.6 2006/02/22 20:59:58 wiz Exp $
 
 .include "../../lang/ocaml/Makefile.common"
 
@@ -27,5 +27,5 @@ BUILDLINK_DEPMETHOD.${BDB_TYPE}=build
 
 .include "../../lang/ocaml/buildlink3.mk"
 .include "../../x11/tk/buildlink3.mk"
-.include "../../mk/x11.buildlink3.mk"
+.include "../../x11/libX11/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
